
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_1__ ;


typedef scalar_t__ uint32_t ;
struct fmt_entry {scalar_t__ mplayer_fmt; int fourcc; } ;
struct TYPE_5__ {int desktop_fmt; int d3d_handle; } ;
typedef TYPE_1__ d3d_priv ;
typedef int HRESULT ;
typedef int D3DFORMAT ;


 int D3DADAPTER_DEFAULT ;
 int D3DRTYPE_TEXTURE ;
 int D3DUSAGE_DYNAMIC ;
 int D3DUSAGE_QUERY_FILTER ;
 int DEVTYPE ;
 scalar_t__ FAILED (int ) ;
 int IDirect3D9_CheckDeviceFormat (int ,int ,int ,int ,int,int ,int ) ;
 int IDirect3D9_CheckDeviceFormatConversion (int ,int ,int ,int ,int ) ;
 int IMGFMT_IS_ANY_RND (scalar_t__) ;
 int MP_DBG (TYPE_1__*,char*,char const*,int ) ;
 int MP_VERBOSE (TYPE_1__*,char*,char const*,int ) ;
 struct fmt_entry* fmt_table ;
 int vo_format_name (scalar_t__) ;

__attribute__((used)) static D3DFORMAT check_format(d3d_priv *priv, uint32_t movie_fmt,
                              bool as_texture)
{
    const char *type = as_texture ? "texture rendering" : "StretchRect";
    const struct fmt_entry *cur = &fmt_table[0];





    if (as_texture && !IMGFMT_IS_ANY_RND(movie_fmt))
        return 0;

    while (cur->mplayer_fmt) {
        if (cur->mplayer_fmt == movie_fmt) {
            HRESULT res;
            if (as_texture) {
                res = IDirect3D9_CheckDeviceFormat(priv->d3d_handle,
                            D3DADAPTER_DEFAULT,
                            DEVTYPE,
                            priv->desktop_fmt,
                            D3DUSAGE_DYNAMIC | D3DUSAGE_QUERY_FILTER,
                            D3DRTYPE_TEXTURE,
                            cur->fourcc);
            } else {


                res = IDirect3D9_CheckDeviceFormatConversion(priv->d3d_handle,
                            D3DADAPTER_DEFAULT,
                            DEVTYPE,
                            cur->fourcc,
                            priv->desktop_fmt);
            }
            if (FAILED(res)) {
                MP_VERBOSE(priv, "Rejected image format "
                       "(%s): %s\n", type, vo_format_name(cur->mplayer_fmt));
                return 0;
            }

            MP_DBG(priv, "Accepted image format (%s): %s\n",
                   type, vo_format_name(cur->mplayer_fmt));

            return cur->fourcc;
        }
        cur++;
    }

    return 0;
}
